--- a/css/style.css
+++ b/css/style.css
@@ -2026,7 +2026,7 @@ a:active::before {
   height: 8px;
   top: 44%;
   left: 10%;
-  content: 0;
+  content: "";
   border-radius: 50%;
   background-color: white;
 }
@@ -2324,7 +2324,7 @@ input[name=username] {
 .input-box-srh input {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
-  border-right-color: 0;
+  border-right-color: transparent;
 }
 
 .input-box-srh .ic-search-btn {
@@ -3290,8 +3290,8 @@ input[name=username] {
   padding: 12px 16px;
   text-decoration: none;
   border: none;
-  -webkit-transition: background color ease-in-out 0ms;
-  transition: background color ease-in-out 0ms;
+  -webkit-transition: background 0.2s ease-in-out 0ms, color 0.2s ease-in-out 0ms;
+  transition: background 0.2s ease-in-out 0ms, color 0.2s ease-in-out 0ms;
   text-align: center;
   color: white;
   cursor: pointer;
@@ -6500,8 +6500,8 @@ button.swiper-pagination-bullet {
   height: 100%;
   border: 1px solid transparent;
   border-radius: 50%;
-  -webkit-transition: opacity border ease-in-out 0ms;
-  transition: opacity border ease-in-out 0ms;
+  -webkit-transition: opacity 0.2s ease-in-out 0ms, border 0.2s ease-in-out 0ms;
+  transition: opacity 0.2s ease-in-out 0ms, border 0.2s ease-in-out 0ms;
 }
 
 .cnt-social a:before {
@@ -8954,7 +8954,7 @@ html.with-fancybox header.hdr--fixed {
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1140px) {
   .animate__animated {
     /*CSS transitions*/
     -webkit-transition-property: none !important;
